--- a/sources/style.sass
+++ b/sources/style.sass
@@ -472,12 +472,15 @@ nav
       &:after
         bottom: 50%
 
+.works-cards
+  display: flex
+  justify-content: center
 
 .works-cards
   &__card
     position: relative
     height: 470px
-    flex: 1 1 40%
+    max-width: 580px
     margin: 2%
     display: block
     background: Honeydew
