--- a/sources/style.sass
+++ b/sources/style.sass
@@ -479,7 +479,7 @@ nav
 .works-cards
   &__card
     position: relative
-    height: 470px
+    height: calc(280px + (470 - 280) * ((100vw - 320px) / (1920 - 320)))
     max-width: 580px
     margin: 2%
     display: block
@@ -498,7 +498,7 @@ nav
           transform: scale(1.1)
   &__image
     background: black
-    height: 400px 
+    height: calc(210px + (400 - 210) * ((100vw - 320px) / (1920 - 320))) 
     overflow: hidden
     img
       width: 100%
